--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 	--color-pink: rgb(255, 38, 158);
 	--color-white: rgb(239, 254, 255);
 	--color-darkblue: rgb(0, 47, 60);
+	--color-green: #07fa21;
 	--alodokter-color: #3570d2;
 	--black-color: #24292e;
 	--linkedin-color: ;
@@ -19,28 +20,24 @@
 body {
 	margin: 0;
 	height: 100vh;
-	background: rgb(0,153,255);
-	background: radial-gradient(circle, rgba(0,153,255,1) 29%, rgba(0,212,255,1) 100%); 
-	font-family: "Noto Sans JP", sans-serif;
+	font-family: 'Roboto', sans-serif;
+	background-color: #060606;
+	background-image: url("data:image/svg+xml,%3Csvg width='20' height='10' viewBox='0 0 20 10' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M16 6H6v4H4V6H2V4h2V0h2v4h10V0h2v4h2v2h-2v4h-2V6z' fill='%2307fa21' fill-opacity='0.06' fill-rule='evenodd'/%3E%3C/svg%3E");
 }
 
 a {
 	text-decoration: none;
 	color: var(--black-white);
 	transition: 0.6s;
-	text-decoration: underline;
-	font-style: italic;
-	/* text-shadow: 2px 1px var(--color-pink); */
 }
 
 hr {
-	color: var(--color-blue);
+	color: var(--color-green);
 }
 
 a:hover {
-	color: var(--color-blue);
+	color: var(--color-green);
 	background-color: var(--color-white);
-	/* text-shadow: 1px 1px var(--color-white); */
 }
 
 h1, h2, h3, h4, h5 p {
@@ -58,14 +55,6 @@ p {
 
 
 /* MODULES =============*/
-
-.text-block {
-	background-color: var(--color-blue);
-	padding: 0 8px;
-	color: var(--color-white);
-	font-style: italic;
-	text-decoration: underline;
-}
 
 .cards {
 	background-color: var(--color-white);
@@ -88,26 +77,6 @@ p {
 	margin: 0 auto;
 	height: 100vh;
 }
-
-/* .twitter-text-shadow {
-	text-shadow: 2px 2px #1da1f2;
-}
-
-.medium-text-shadow {
-	text-shadow: 2px 2px var(--medium-color);
-}
-
-.github-text-shadow {
-	text-shadow: 2px 2px var(--github-color);
-}
-
-.alodokter-text-shadow {
-	text-shadow: 2px 2px var(--alodokter-color);
-}
-
-.linkedin-text-shadow {
-	text-shadow: 2px 2px var(--linkedin-color);
-} */
 
 /* PROFILE PHOTO ==========*/
 
@@ -132,7 +101,7 @@ p {
 
 .description p {
 	text-align: justify;
-	line-height: 1.8;
+	line-height: 1.5;
 }
 
 .social-icons ul {
@@ -149,12 +118,13 @@ p {
 }
 
 .social-icons ul li a:hover {
-	color: var(--color-blue);
+	color: var(--color-green);
 }
 
 /* MEDIA QUERIES ================*/
 @media screen and (max-width: 992px) {
 	.container {
+		padding: 25% 0;
 		max-width: 90%;
 	}
 	.row {
